TLS with Kubernetes Gateway API/gw-api/secure-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: secure-http-route
  namespace: tls-gw-api
spec:
  parentRefs:
    - kind: Gateway
      name: k8s-gateway
      sectionName: https-listener
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: PROTOCOL
                value: HTTPS-Secure
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: PROTOCOL
                value: HTTPS-Secure
      backendRefs:
        - name: echoserver-service
          port: 80
